crates/fixtures/tests/snapshots/hostile__bidi_line_override.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      130
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "two-columns",
    "source": "document"
  },
  "pages": [
    {
      "width": 430080,
      "height": 307200
    }
  ],
  "frames": [
    {
      "name": "left",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 24576,
        "ty": 30720
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 133120,
        "height": 81920
      }
    },
    {
      "name": "right",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 167936,
        "ty": 30720
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 133120,
        "height": 81920
      }
    },
    {
      "name": "margin",
      "role": "margin",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 311296,
        "ty": 30720
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 81920
      }
    }
  ],
  "blocks": [
    {
      "node": "8@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 31
          },
          "preview": "Latin ‮office 123 office 456",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 133120,
            "height": 13517
          },
          "baseline": 10707,
          "width": 126634,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 9
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 28915
            },
            {
              "range": {
                "start": 9,
                "end": 30
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 1,
              "x": 28915,
              "width": 97719
            },
            {
              "range": {
                "start": 30,
                "end": 31
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 126634,
              "width": 2625
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 31,
            "end": 46
          },
          "preview": "office 789",
          "rect": {
            "origin": {
              "x": 0,
              "y": 13517
            },
            "width": 133120,
            "height": 13517
          },
          "baseline": 24224,
          "width": 47547,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 31,
                "end": 41
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 1,
              "x": 0,
              "width": 47547
            },
            {
              "range": {
                "start": 41,
                "end": 46
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 47547,
              "width": 17709
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 46,
            "end": 74
          },
          "preview": "more reversed office 321",
          "rect": {
            "origin": {
              "x": 0,
              "y": 27034
            },
            "width": 133120,
            "height": 13517
          },
          "baseline": 37741,
          "width": 122805,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 46,
                "end": 70
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 1,
              "x": 0,
              "width": 122805
            },
            {
              "range": {
                "start": 70,
                "end": 74
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 122805,
              "width": 10500
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 74,
            "end": 92
          },
          "preview": "‬ normal end.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 40551
            },
            "width": 133120,
            "height": 13517
          },
          "baseline": 51258,
          "width": 64601,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 74,
                "end": 77
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 0
            },
            {
              "range": {
                "start": 77,
                "end": 92
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 72476
            }
          ]
        }
      ]
    },
    {
      "node": "100@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 22
          },
          "preview": "אבג 123 אבג",
          "rect": {
            "origin": {
              "x": 0,
              "y": 62260
            },
            "width": 133120,
            "height": 13517
          },
          "baseline": 72967,
          "width": 65400,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 10,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 1,
              "x": 0,
              "width": 41961
            },
            {
              "range": {
                "start": 7,
                "end": 10
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 2,
              "x": 41961,
              "width": 16896
            },
            {
              "range": {
                "start": 0,
                "end": 7
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 1,
              "x": 58857,
              "width": 24252
            }
          ]
        },
        {
          "frame": 1,
          "text": {
            "start": 22,
            "end": 36
          },
          "preview": "אבג 456",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 133120,
            "height": 13517
          },
          "baseline": 10707,
          "width": 41148,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 32,
                "end": 36
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 1,
              "x": 0,
              "width": 10500
            },
            {
              "range": {
                "start": 29,
                "end": 32
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 2,
              "x": 10500,
              "width": 16896
            },
            {
              "range": {
                "start": 22,
                "end": 29
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 1,
              "x": 27396,
              "width": 24252
            }
          ]
        }
      ]
    }
  ],
  "relations": [],
  "diagnostics": []
}
