crates/fixtures/tests/snapshots/hostile__bidi_override_ligature.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      77
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "default",
    "source": "builtin"
  },
  "pages": [
    {
      "width": 430080,
      "height": 307200
    }
  ],
  "frames": [
    {
      "name": "main",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 36864,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 225280,
        "height": 233472
      }
    },
    {
      "name": "margin",
      "role": "margin",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 280576,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 233472
      }
    }
  ],
  "blocks": [
    {
      "node": "6@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 51
          },
          "preview": "Before ‮office 123‬, then normal English after",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 10707,
          "width": 218280,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 10
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 35741
            },
            {
              "range": {
                "start": 10,
                "end": 23
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 1,
              "x": 35741,
              "width": 47547
            },
            {
              "range": {
                "start": 23,
                "end": 51
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 83288,
              "width": 137617
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 51,
            "end": 54
          },
          "preview": "it.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 13517
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 24224,
          "width": 10397,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 51,
                "end": 54
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 10397
            }
          ]
        }
      ]
    },
    {
      "node": "60@1",
      "kind": "annotation",
      "style": {
        "family": "Source Serif Pro",
        "size": 8448,
        "line_height": 10560,
        "explain": {
          "family": "default",
          "line-height": "style note",
          "size": "style note"
        }
      },
      "lines": [
        {
          "frame": 1,
          "text": {
            "start": 0,
            "end": 7
          },
          "preview": "A note.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 112640,
            "height": 10560
          },
          "baseline": 8241,
          "width": 26592,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 7
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 8448,
              "level": 0,
              "x": 0,
              "width": 26592
            }
          ]
        }
      ]
    }
  ],
  "relations": [
    {
      "id": "76@1",
      "schema": "reprise.follow",
      "owner": "60@1",
      "status": "valid",
      "applied": true,
      "targets": [
        {
          "role": "line",
          "status": "valid",
          "resolved": {
            "line": {
              "node": "6@1",
              "line": 0
            }
          }
        }
      ]
    }
  ],
  "diagnostics": []
}
